Issue #687 style: Spacing changes in sidebar
Changes:
 1. Padding changes in sidebar and text plugin

--- a/org.ekstep.text-1.1/editor/style/plugin.css
+++ b/org.ekstep.text-1.1/editor/style/plugin.css
@@ -130,7 +130,8 @@
 }
 
 .sidebar-accordion .title {
-    padding-left: 0!important;
+    padding-left: 1em!important;
+    padding-right: 1em!important;
     color: #2e9fd9!important;
     height: 3em;
     line-height: 2em;
